<resources>
    <string name="app_name">Photo Album</string>
    <string name="photo_details">Photo Details</string>
    <string name="error_network">No Internet Connection</string>
    <string name="error_no_response">No Response From Server</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="transition_name_photo">transition:photo</string>
    <string name="photo_id">Photo ID</string>
    <string name="album_id">Album ID</string>
    <string name="url">Url</string>
    <string name="thumbnail">Thumbnail Url</string>
    <string name="loading">Loading...</string>

</resources>
