<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scaleType="centerCrop"
        android:transitionName="@string/transition_name_photo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="accusamus beatae ad facilis cum similique qui sunt"
            android:textColor="#000"
            android:textSize="25sp" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:stretchColumns="*">

        <TableRow android:layout_width="0dp">

            <TextView
                android:id="@+id/lblAlbumId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_id"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblAlbumId_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/lblAlbumId"
                android:text="1"
                android:textColor="#9f9f9f"
                android:textSize="20sp" />

        </TableRow>

        <TableRow android:layout_width="0dp">

            <TextView
                android:id="@+id/lblPhotoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_id"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblPhotoId_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/lblPhotoId"
                android:text="details"
                android:textColor="#9f9f9f"
                android:textSize="20sp" />

        </TableRow>

        <TableRow android:layout_width="0dp">

            <TextView
                android:id="@+id/lblUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textColor="#000"
                android:textSize="20sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lblUrl_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/lblUrl"
                android:text="Url"
                android:textColor="#9f9f9f"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lblThumbnailUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thumbnail"
                android:textColor="#000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lblThumbnailUrl_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/lblThumbnailUrl"
                android:text="Thumbnail"
                android:textColor="#9f9f9f"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>